0.70-dev
----
pages with top floats have extra CSS class: pagination-page-topfloat
use mutation observers instead of flow events
support for top floats
changed default options reading. Changing page size on the fly now has to happen by changing page sized in paginationConfig rather than Pagionation.config

0.60-dev
----
changed version scheme
prefix flownames and content elements
option not to change original DOM
style-element creation through JS options
allow for layout change event to be configurable

0.25.0
----
Add footnote support for dynamic contents
Increased requirement to Chrome 25

0.23.1
----
Added footnote support for static content (reflow has to be enabled)
Added multi column support

0.23.0
----
First stable version (version number correponds to Chrome version this can run under)